Allow user creation without second_factor, renaming phone number to second number as it can also be an IP address.
